--- a/src/main/kotlin/org/wfanet/measurement/access/service/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/access/service/BUILD.bazel
@@ -28,3 +28,18 @@ kt_jvm_library(
         "@wfa_common_jvm//imports/java/io/grpc:api",
     ],
 )
+
+kt_jvm_library(
+    name = "id_generator",
+    srcs = ["IdGenerator.kt"],
+)
+
+kt_jvm_library(
+    name = "permission_mapping",
+    srcs = ["PermissionMapping.kt"],
+    deps = [
+        "//src/main/proto/wfa/measurement/config/access:permissions_config_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/internal/access:permission_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/common:guava",
+    ],
+)
