fix: fix prober's dep name, and lint in prober cue

--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -502,7 +502,7 @@ cue_library(
     name = "measurement_system_prober_cue",
     srcs = ["measurement_system_prober.cue"],
     deps = [
-        ":config_cue",
+        ":config",
         "//src/main/k8s:measurement_system_prober",
     ],
 )
