--- a/src/test/python/wfa/measurement/reporting/postprocessing/tools/BUILD.bazel
+++ b/src/test/python/wfa/measurement/reporting/postprocessing/tools/BUILD.bazel
@@ -3,8 +3,14 @@ load("@rules_python//python:defs.bzl", "py_test")
 py_test(
     name = "test_post_process_origin_report",
     srcs = ["test_post_process_origin_report.py"],
+    data = [":sample_reports"],
     deps = [
         "//src/main/proto/wfa/measurement/reporting/postprocessing/v2alpha:report_summary_py_pb2",
         "//src/main/python/wfa/measurement/reporting/postprocessing/tools:post_process_origin_report",
     ],
+)
+
+filegroup(
+    name = "sample_reports",
+    srcs = glob(["*.json"]),
 )
