--- a/src/main/kotlin/org/wfanet/measurement/access/service/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/access/service/BUILD.bazel
@@ -25,6 +25,7 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/measurement/access/service/internal:errors",
         "//src/main/kotlin/org/wfanet/measurement/common/grpc:error_info",
         "//src/main/proto/google/rpc:error_details_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/access/v1alpha:principal_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/io/grpc:api",
     ],
 )
