--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -517,12 +517,10 @@ cue_dump(
         "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
         "image_tag": IMAGE_REPOSITORY_SETTINGS.image_tag,
         "secret_name": SECRET_NAME,
-        "edp1_name": SIMULATOR_K8S_SETTINGS.edp1_name,
-        "edp2_name": SIMULATOR_K8S_SETTINGS.edp2_name,
-        "edp3_name": SIMULATOR_K8S_SETTINGS.edp3_name,
-        "edp4_name": SIMULATOR_K8S_SETTINGS.edp4_name,
-        "edp5_name": SIMULATOR_K8S_SETTINGS.edp5_name,
-        "edp6_name": SIMULATOR_K8S_SETTINGS.edp6_name,
+        "edp_resource_names": [
+            SIMULATOR_K8S_SETTINGS.edp1_name,
+            SIMULATOR_K8S_SETTINGS.edp2_name,
+        ],
     },
     tags = ["manual"],
     deps = [
