--- a/src/main/k8s/local/BUILD.bazel
+++ b/src/main/k8s/local/BUILD.bazel
@@ -234,10 +234,8 @@ cue_dump(
         "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
         "image_tag": IMAGE_REPOSITORY_SETTINGS.image_tag,
         "secret_name": SECRET_NAME,
-        "edp_resource_names": [
-            TEST_K8S_SETTINGS.edp1_name,
-            TEST_K8S_SETTINGS.edp2_name,
-        ],
+        "edp1_name": TEST_K8S_SETTINGS.edp1_name,
+        "edp2_name": TEST_K8S_SETTINGS.edp2_name,
     },
     tags = ["manual"],
     deps = [
