Add worker2 to gcloud terraform and workflow

--- a/.github/workflows/configure-duchy.yml
+++ b/.github/workflows/configure-duchy.yml
@@ -51,6 +51,7 @@ on:
         type: choice
         options:
         - worker1
+        - worker2
         - aggregator
         required: true
       apply:
