--- a/src/main/kotlin/org/wfanet/measurement/access/deploy/gcloud/spanner/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/access/deploy/gcloud/spanner/BUILD.bazel
@@ -1,4 +1,6 @@
+load("@rules_java//java:defs.bzl", "java_binary")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
+load("//src/main/docker:macros.bzl", "java_image")
 
 package(
     default_visibility = [
@@ -55,4 +57,36 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/internal/access:policies_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner",
     ],
+)
+
+kt_jvm_library(
+    name = "internal_api_server",
+    srcs = ["InternalApiServer.kt"],
+    visibility = ["//visibility:private"],
+    deps = [
+        ":spanner_permissions_service",
+        ":spanner_policies_service",
+        ":spanner_principals_service",
+        ":spanner_roles_service",
+        "//src/main/kotlin/org/wfanet/measurement/access/common:tls_client_principal_mapping",
+        "//src/main/kotlin/org/wfanet/measurement/access/service/internal:permission_mapping",
+        "@wfa_common_jvm//imports/java/picocli",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner",
+    ],
+)
+
+java_binary(
+    name = "InternalApiServer",
+    main_class = "org.wfanet.measurement.access.deploy.gcloud.spanner.InternalApiServer",
+    visibility = ["//visibility:private"],
+    runtime_deps = [":internal_api_server"],
+)
+
+java_image(
+    name = "internal_api_server_image",
+    binary = ":InternalApiServer",
+    main_class = "org.wfanet.measurement.access.deploy.gcloud.spanner.InternalApiServer",
+    visibility = ["//src:docker_image_deployment"],
 )
