fix: add no-remote-exec tag to BaseTeeApplicationTest

--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
@@ -3,6 +3,9 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
 kt_jvm_test(
     name = "BaseTeeApplicationTest",
     srcs = ["BaseTeeApplicationTest.kt"],
+    tags = [
+        "no-remote-exec",
+    ],
     test_class = "org.wfanet.measurement.securecomputation.teesdk.BaseTeeApplicationTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/teesdk:base_tee_application",
