--- a/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
@@ -113,13 +113,11 @@ proto_library(
     name = "media_type_proto",
     srcs = ["media_type.proto"],
     strip_import_prefix = IMPORT_PREFIX,
-    deps = [
-    ],
 )
 
 kt_jvm_proto_library(
-    name = "media_type_kt_jvm_proto",
-    deps = [":media_type_proto"],
+    name = "impression_qualification_filter_kt_jvm_proto",
+    deps = [":impression_qualification_filter_proto"],
 )
 
 proto_library(
