--- a/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
@@ -50,11 +50,12 @@ kt_jvm_proto_library(
 proto_library(
     name = "impression_qualification_filter_proto",
     srcs = ["impression_qualification_filter.proto"],
-    deps = [":reporting_common_proto",
-            "@com_google_googleapis//google/api:field_behavior_proto",
-        "@com_google_googleapis//google/api:resource_proto",
-            ],
     strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":reporting_common_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+    ],
 )
 
 kt_jvm_proto_library(
@@ -199,12 +200,12 @@ proto_library(
     srcs = ["page.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
-        "@com_google_protobuf//:timestamp_proto",
-        "@com_google_googleapis//google/api:resource_proto",
-        "@com_google_googleapis//google/type:interval_proto",
         ":reporting_common_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
         "@com_google_googleapis//google/type:dayofweek_proto",
+        "@com_google_googleapis//google/type:interval_proto",
+        "@com_google_protobuf//:timestamp_proto",
     ],
 )
 
