--- a/.github/workflows/scan-images.yml
+++ b/.github/workflows/scan-images.yml
@@ -82,6 +82,7 @@ jobs:
           - duchy/aws-requisition-fulfillment
           - duchy/aws-postgres-internal-server
           - panel-exchange/forwarded-storage-daemon
+          - measurement/population-requisition-fulfiller
     steps:
       - name: Get SARIF file path
         id: get-sarif-file-path
