--- a/src/test/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/spanner/computation/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/spanner/computation/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
 load("@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner/testing:macros.bzl", "spanner_emulator_test")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library", "kt_jvm_test")
 
