--- a/src/main/cc/wfa/panelmatch/common/crypto/BUILD.bazel
+++ b/src/main/cc/wfa/panelmatch/common/crypto/BUILD.bazel
@@ -13,8 +13,8 @@ cc_library(
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
-        "@tink_cc//subtle",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/subtle",
+        "@tink_cc//tink/util:secret_data",
         "@wfa_common_cpp//src/main/cc/common_cpp/macros",
     ],
 )
@@ -29,7 +29,7 @@ cc_library(
         "//src/main/cc/wfa/panelmatch/common/crypto:hkdf",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/util:secret_data",
         "@wfa_common_cpp//src/main/cc/common_cpp/macros",
     ],
 )
@@ -50,7 +50,7 @@ cc_library(
         "@com_google_private_join_and_compute//private_join_and_compute/crypto:ec_commutative_cipher",
         "@com_google_private_join_and_compute//private_join_and_compute/util:status_includes",
         "@com_google_protobuf//:protobuf",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/util:secret_data",
     ],
 )
 
@@ -63,7 +63,7 @@ cc_library(
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_private_join_and_compute//private_join_and_compute/crypto:ec_commutative_cipher",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/util:secret_data",
     ],
 )
 
@@ -75,8 +75,8 @@ cc_library(
     deps = [
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
-        "@tink_cc//subtle",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/subtle",
+        "@tink_cc//tink/util:secret_data",
     ],
 )
 
@@ -89,7 +89,7 @@ cc_library(
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/util:secret_data",
         "@wfa_common_cpp//src/main/cc/common_cpp/fingerprinters",
         "@wfa_common_cpp//src/main/cc/common_cpp/macros",
     ],
@@ -104,7 +104,7 @@ cc_library(
         "@boringssl//:crypto",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/util:secret_data",
     ],
 )
 
@@ -118,7 +118,7 @@ cc_library(
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/util:secret_data",
     ],
 )
 
@@ -131,7 +131,7 @@ cc_library(
         ":key_loader",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/util:secret_data",
     ],
 )
 
