--- a/src/main/kotlin/org/wfanet/measurement/duchy/mill/liquidlegionsv2/crypto/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/mill/liquidlegionsv2/crypto/BUILD.bazel
@@ -12,7 +12,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/any_sketch/crypto:sketch_encryption_methods_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/duchy/protocol:liquid_legions_v2_encryption_methods_kt_jvm_proto",
         "//src/main/swig/protocol/liquidlegionsv2:liquid_legions_v2_encryption_utility",
-        "@any_sketch_java//src/main/java/org/wfanet/anysketch/crypto:sketch_encrypter_adapter",
+        "@any_sketch_java//src/main/java/org/wfanet/anysketch",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
     ],
 )
@@ -27,7 +27,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/any_sketch/crypto:sketch_encryption_methods_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/duchy/protocol:reach_only_liquid_legions_v2_encryption_methods_kt_jvm_proto",
         "//src/main/swig/protocol/reachonlyliquidlegionsv2:reach_only_liquid_legions_v2_encryption_utility",
-        "@any_sketch_java//src/main/java/org/wfanet/anysketch/crypto:sketch_encrypter_adapter",
+        "@any_sketch_java//src/main/java/org/wfanet/anysketch",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
     ],
 )
