--- a/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
@@ -19,7 +19,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/frequency_count:secret_share_methods_kt_jvm__proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:api_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/eventdataprovider/shareshuffle:vid_index_map_entry_kt_jvm_proto",
-        "@any_sketch_java//src/main/java/org/wfanet/frequencycount:secret_share_generator_adapter",
+        "@any_sketch_java//src/main/java/org/wfanet/frequencycount",
         "@wfa_common_jvm//imports/java/com/google/common:guava",
         "@wfa_common_jvm//imports/kotlin/kotlin/reflect",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
