--- a/src/main/kotlin/org/wfanet/measurement/loadtest/config/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/loadtest/config/BUILD.bazel
@@ -21,7 +21,7 @@ kt_jvm_library(
     name = "vid_sampling",
     srcs = ["VidSampling.kt"],
     deps = [
-        "@any_sketch_java//src/main/java/org/wfanet/sampling:vid_sampler",
+        "@any_sketch_java//src/main/java/org/wfanet/sampling",
         "@wfa_common_jvm//imports/java/com/google/common:guava",
     ],
 )
