--- a/src/main/proto/wfa/measurement/reporting/bff/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/bff/v1alpha/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_grpc_proto_library")
 load("//build/grpc_gateway:defs.bzl", "go_grpc_gateway_proto_library")
 
