--- a/src/main/proto/wfa/panelmatch/client/tools/BUILD.bazel
+++ b/src/main/proto/wfa/panelmatch/client/tools/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")
 
 package(default_visibility = ["//src:__subpackages__"])
