--- a/src/test/cc/wfa/panelmatch/protocol/crypto/BUILD.bazel
+++ b/src/test/cc/wfa/panelmatch/protocol/crypto/BUILD.bazel
@@ -30,8 +30,9 @@ cc_test(
         "//src/main/cc/wfa/panelmatch/common/crypto:hkdf",
         "//src/main/cc/wfa/panelmatch/common/crypto:register_identity_key_loader",
         "//src/main/cc/wfa/panelmatch/protocol/crypto:event_data_preprocessor",
+        "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
-        "@tink_cc//util:secret_data",
+        "@tink_cc//tink/util:secret_data",
         "@wfa_common_cpp//src/main/cc/common_cpp/fingerprinters",
         "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
     ],
