--- a/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/BUILD.bazel
@@ -6,7 +6,7 @@ kt_jvm_test(
     test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.NativeTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle:native",
-        "@any_sketch_java//src/main/java/org/wfanet/frequencycount:secret_share_generator_adapter",
+        "@any_sketch_java//src/main/java/org/wfanet/frequencycount",
         "@wfa_common_jvm//imports/java/org/junit",
     ],
 )
