--- a/src/main/k8s/BUILD.bazel
+++ b/src/main/k8s/BUILD.bazel
@@ -87,3 +87,12 @@ cue_library(
         ":postgres",
     ],
 )
+
+cue_library(
+    name = "population_requisition_fulfiller",
+    srcs = ["population_requisition_fulfiller.cue"],
+    deps = [
+        ":base",
+        ":config",
+    ],
+)
