--- a/src/main/k8s/local/BUILD.bazel
+++ b/src/main/k8s/local/BUILD.bazel
@@ -188,6 +188,33 @@ cue_dump(
     ],
 )
 
+cue_library(
+    name = "population_requisition_fulfillers_cue",
+    srcs = ["population_requisition_fulfillers.cue"],
+    deps = [
+        ":config_cue",
+        "//src/main/k8s:population_requisition_fulfiller",
+    ],
+)
+
+cue_dump(
+    name = "population_requisition_fulfillers",
+    cue_tags = {
+        "secret_name": SECRET_NAME,
+        "container_registry": IMAGE_REPOSITORY_SETTINGS.container_registry,
+        "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
+        "image_tag": IMAGE_REPOSITORY_SETTINGS.image_tag,
+        "mc_name": TEST_K8S_SETTINGS.mc_name,
+        "pdp1_name": TEST_K8S_SETTINGS.pdp1_name,
+        "pdp1_cert_name": TEST_K8S_SETTINGS.pdp1_cert_name,
+        "population_resource_name": TEST_K8S_SETTINGS.population_resource_name,
+    },
+    tags = ["manual"],
+    deps = [
+        ":population_requisition_fulfillers_cue",
+    ],
+)
+
 cue_dump(
     name = "postgres_database",
     srcs = ["postgres_database.cue"],
