--- a/src/main/python/wfa/measurement/reporting/postprocessing/noiseninja/BUILD.bazel
+++ b/src/main/python/wfa/measurement/reporting/postprocessing/noiseninja/BUILD.bazel
@@ -9,6 +9,7 @@ py_library(
     deps = [
         requirement("highspy"),
         requirement("numpy"),
+        requirement("osqp"),
         requirement("qpsolvers"),
     ],
 )
