add required flags to cue file.

--- a/src/main/k8s/testing/secretfiles/BUILD.bazel
+++ b/src/main/k8s/testing/secretfiles/BUILD.bazel
@@ -220,6 +220,8 @@ SECRET_FILES = [
     "pdp1_cs_private.der",
     "pdp1_enc_private.tink",
     "pdp1_enc_public.tink",
+    "pdp1_root.pem",
+    "pdp1_root.key",
 ]
 
 filegroup(
