create pb files to be used in test.

--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -88,7 +88,10 @@ kustomization_dir(
     testonly = True,
     srcs = [
         "config_files_kustomization.yaml",
+        "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
+        "//src/main/k8s/testing/secretfiles:person_type_set",
+        "//src/main/k8s/testing/secretfiles:test_event_type_set",
     ],
     renames = {"config_files_kustomization.yaml": "kustomization.yaml"},
 )
@@ -398,6 +401,8 @@ kustomization_dir(
         "synthetic_generator_config_files_kustomization.yaml",
         "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
+        "//src/main/k8s/testing/secretfiles:person_type_set",
+        "//src/main/k8s/testing/secretfiles:test_event_type_set",
     ],
     renames = {
         "synthetic_generator_config_files_kustomization.yaml": "kustomization.yaml",
@@ -447,7 +452,10 @@ kustomization_dir(
     testonly = True,
     srcs = [
         "reporting_v2_config_files_kustomization.yaml",
+        "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
+        "//src/main/k8s/testing/secretfiles:person_type_set",
+        "//src/main/k8s/testing/secretfiles:test_event_type_set",
     ],
     renames = {"reporting_v2_config_files_kustomization.yaml": "kustomization.yaml"},
 )
