--- a/src/main/k8s/dev/config_files_kustomization.yaml
+++ b/src/main/k8s/dev/config_files_kustomization.yaml
@@ -16,4 +16,7 @@ configMapGenerator:
 - name: config-files
   files:
   - authority_key_identifier_to_principal_map.textproto
+  - synthetic_population_spec_large.textproto
   - known_event_group_metadata_type_set.pb
+  - person_type_set.pb
+  - test_event_type_set.pb
