--- a/src/main/k8s/local/testing/BUILD.bazel
+++ b/src/main/k8s/local/testing/BUILD.bazel
@@ -79,9 +79,12 @@ kustomization_dir(
     name = "config_files",
     srcs = [
         "config_files_kustomization.yaml",
+        "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
+        "//src/main/k8s/testing/secretfiles:person_type_set",
+        "//src/main/k8s/testing/secretfiles:test_event_type_set",
     ],
     renames = {"config_files_kustomization.yaml": "kustomization.yaml"},
     tags = ["manual"],
@@ -92,9 +95,12 @@ kustomization_dir(
     srcs = [
         "config_files_kustomization.yaml",
         "empty_encryption_key_pair_config.textproto",
+        "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
+        "//src/main/k8s/testing/secretfiles:person_type_set",
+        "//src/main/k8s/testing/secretfiles:test_event_type_set",
     ],
     renames = {
         "config_files_kustomization.yaml": "kustomization.yaml",
