add new population_spect textproto to test with

--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -88,6 +88,7 @@ kustomization_dir(
     testonly = True,
     srcs = [
         "config_files_kustomization.yaml",
+        "//src/main/k8s/testing/data:real_population_spec_large",
         "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:person_type_set",
@@ -399,6 +400,7 @@ kustomization_dir(
     testonly = True,
     srcs = [
         "synthetic_generator_config_files_kustomization.yaml",
+        "//src/main/k8s/testing/data:real_population_spec_large",
         "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:person_type_set",
@@ -452,6 +454,7 @@ kustomization_dir(
     testonly = True,
     srcs = [
         "reporting_v2_config_files_kustomization.yaml",
+        "//src/main/k8s/testing/data:real_population_spec_large",
         "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:person_type_set",
