--- a/src/main/k8s/dev/config_files_kustomization.yaml
+++ b/src/main/k8s/dev/config_files_kustomization.yaml
@@ -17,6 +17,7 @@ configMapGenerator:
   files:
   - authority_key_identifier_to_principal_map.textproto
   - synthetic_population_spec_large.textproto
+  - population_spec_large.textproto
   - known_event_group_metadata_type_set.pb
   - person_type_set.pb
   - test_event_type_set.pb
