--- a/src/main/k8s/local/BUILD.bazel
+++ b/src/main/k8s/local/BUILD.bazel
@@ -331,6 +331,7 @@ kustomization_dir(
         "config_files_kustomization.yaml",
         "empty_akid_mapping_config.textproto",
         "empty_encryption_key_pair_config.textproto",
+        "//src/main/k8s/testing/data:real_population_spec_large",
         "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
@@ -350,6 +351,7 @@ kustomization_dir(
     srcs = [
         "config_files_kustomization.yaml",
         ":encryption_key_pair_config.textproto",
+        "//src/main/k8s/testing/data:real_population_spec_large",
         "//src/main/k8s/testing/data:synthetic_generation_specs_large",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
