--- a/src/main/k8s/local/config_files_kustomization.yaml
+++ b/src/main/k8s/local/config_files_kustomization.yaml
@@ -20,6 +20,7 @@ configMapGenerator:
   - metric_spec_config.textproto
   - synthetic_population_spec_small.textproto
   - synthetic_population_spec_large.textproto
+  - population_spec_large.textproto
   - synthetic_event_group_spec_small_1.textproto
   - synthetic_event_group_spec_small_2.textproto
   - known_event_group_metadata_type_set.pb
