--- a/src/main/python/wfa/measurement/reporting/postprocessing/noiseninja/BUILD.bazel
+++ b/src/main/python/wfa/measurement/reporting/postprocessing/noiseninja/BUILD.bazel
@@ -7,6 +7,7 @@ py_library(
     imports = ["../"],
     visibility = ["//visibility:public"],
     deps = [
+        requirement("absl-py"),
         requirement("highspy"),
         requirement("numpy"),
         requirement("qpsolvers"),
