--- a/src/main/python/wfa/measurement/reporting/postprocessing/report/BUILD.bazel
+++ b/src/main/python/wfa/measurement/reporting/postprocessing/report/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@pip//:requirements.bzl", "requirement")
 load("@rules_python//python:defs.bzl", "py_library")
 
 py_library(
@@ -7,5 +8,6 @@ py_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/main/python/wfa/measurement/reporting/postprocessing/noiseninja",
+        requirement("absl-py"),
     ],
 )
