--- a/src/test/python/wfa/measurement/reporting/postprocessing/tools/BUILD.bazel
+++ b/src/test/python/wfa/measurement/reporting/postprocessing/tools/BUILD.bazel
@@ -1,4 +1,7 @@
+load("@pip//:requirements.bzl", "requirement")
+load("@rules_python//python:defs.bzl", "py_library")
 load("@rules_python//python:defs.bzl", "py_test")
+
 
 py_test(
     name = "test_post_process_origin_report",
@@ -9,6 +12,18 @@ py_test(
         "//src/main/python/wfa/measurement/reporting/postprocessing/tools:post_process_origin_report",
     ],
 )
+
+py_test(
+    name = "test_error_analysis",
+    srcs = ["test_error_analysis.py"],
+    data = [":sample_reports"],
+    deps = [
+        "//src/main/proto/wfa/measurement/reporting/postprocessing/v2alpha:report_summary_py_pb2",
+        "//src/main/python/wfa/measurement/reporting/postprocessing/tools:post_process_origin_report",
+        requirement("openpyxl"),
+    ],
+)
+
 
 filegroup(
     name = "sample_reports",
