--- a/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
@@ -38,10 +38,32 @@ MESSAGE_LIBS = [
 ]
 
 proto_library(
+    name = "advanced_report_proto",
+    srcs = ["advanced_report.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":media_type_proto",
+        ":metric_frequency_spec_proto",
+        ":reporting_interval_proto",
+        ":reporting_impression_qualification_filter_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_googleapis//google/type:dayofweek_proto",
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "advanced_report_kt_jvm_proto",
+    deps = [":advanced_report_proto"],
+)
+
+proto_library(
     name = "basic_report_proto",
     srcs = ["basic_report.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
+        ":media_type_proto",
         ":page_proto",
         ":reporting_impression_qualification_filter_proto",
         ":reporting_interval_proto",
@@ -127,6 +149,19 @@ proto_library(
 kt_jvm_proto_library(
     name = "impression_qualification_filter_spec_kt_jvm_proto",
     deps = [":impression_qualification_filter_spec_proto"],
+)
+
+proto_library(
+    name = "media_type_proto",
+    srcs = ["media_type.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "media_type_kt_jvm_proto",
+    deps = [":media_type_proto"],
 )
 
 proto_library(
@@ -233,6 +268,7 @@ proto_library(
     srcs = ["reporting_unit.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
+        ":media_type_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
     ],
@@ -259,6 +295,25 @@ proto_library(
 )
 
 proto_library(
+    name = "operation_proto",
+    srcs = ["operation.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_googleapis//google/type:date_proto",
+        "@com_google_googleapis//google/type:datetime_proto",
+        "@com_google_googleapis//google/type:dayofweek_proto",
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "operation_kt_jvm_proto",
+    deps = [":operation_proto"],
+)
+
+proto_library(
     name = "page_proto",
     srcs = ["page.proto"],
     strip_import_prefix = IMPORT_PREFIX,
@@ -274,6 +329,22 @@ proto_library(
         "@com_google_googleapis//google/type:interval_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
+)
+
+proto_library(
+    name = "page_template_proto",
+    srcs = ["page_template.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":page_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "page_template_kt_jvm_proto",
+    deps = [":page_template_proto"],
 )
 
 proto_library(
@@ -297,6 +368,30 @@ SERVICE_LIBS = [
     ":reporting_sets_service_proto",
     ":reports_service_proto",
 ]
+
+proto_library(
+    name = "advanced_reports_service_proto",
+    srcs = ["advanced_reports_service.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":advanced_report_proto",
+        ":operation_proto",
+        ":page_proto",
+        ":reporting_interval_proto",
+        ":reporting_unit_proto",
+        "@com_google_googleapis//google/api:annotations_proto",
+        "@com_google_googleapis//google/api:client_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_protobuf//:field_mask_proto",
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+
+kt_jvm_grpc_proto_library(
+    name = "advanced_reports_service_kt_jvm_grpc_proto",
+    deps = [":advanced_reports_service_proto"],
+)
 
 proto_library(
     name = "basic_reports_service_proto",
@@ -365,6 +460,27 @@ proto_library(
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
     ],
+)
+
+proto_library(
+    name = "page_templates_service_proto",
+    srcs = ["page_templates_service.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":page_proto",
+        ":page_template_proto",
+        ":reporting_unit_proto",
+        "@com_google_googleapis//google/api:annotations_proto",
+        "@com_google_googleapis//google/api:client_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+
+kt_jvm_grpc_proto_library(
+    name = "page_templates_service_kt_jvm_grpc_proto",
+    deps = [":page_templates_service_proto"],
 )
 
 proto_library(
